<resources>
    <!--Application configuration-->
    <string name="app_name">SampleResourceApp</string>
    <string name="test">Activity</string>

    <!--view texts-->
    <string name="mainactivity_button_open_second_activity">Open Second  {}</string>
    <string name="button_open_third_activity">Open ThirdActivity</string>
    <string name="switch_connection_status">Connection Status (Open / Close)</string>
    <string name="button_ok">OK</string>
    <string name="button_exit">Exit</string>
    <string name="number_edittext_default">0</string>

    <!-- Greeting messages-->
    <string name="secondactivity_greeting">Hi, I am SecondActivity!!!!</string>
    <string name="thirdactivity_greeting">Hi, I am ThirdActivity!!!!</string>

    <!--Runtime messages-->
    <string name="second_activity_cancelled_message">Second activity cancelled</string>
    <string name="third_activity_cancelled_message">Third activity cancelled</string>
    <string name="thirdactivity_ok_message">Third Activity OK</string>
    <string name="thirdactivity_cancelled_title_message"> </string>
</resources>