<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <EditText
        android:id="@+id/mainActivityEditTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <EditText
        android:id="@+id/mainActivityEditTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/number_edittext_default"/>

    <Switch
        android:id="@+id/mainActivitySwitchOpenStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_connection_status" />

    <Button
        android:onClick="onOpenSecondActivityButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainactivity_button_open_second_activity" />

    <Button
        android:onClick="onOpenThirdActivityButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_open_third_activity" />

    <Button
        android:onClick="onExitButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_exit" />
</LinearLayout>