<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SecondActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secondactivity_greeting" />

    <EditText
        android:id="@+id/secondActivityEditTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <EditText
        android:id="@+id/secondActivityEditTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Switch
        android:id="@+id/secondActivitySwitchOpenStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_connection_status" />

    <Button
        android:onClick="onOpenThirdActivityButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_open_third_activity" />

    <Button
        android:onClick="onOKButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ok" />

    <Button
        android:onClick="onExitButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_exit" />
</LinearLayout>