<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ThirdActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thirdactivity_greeting" />

    <Button
        android:onClick="onOKButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ok" />

    <Button
        android:onClick="onExitButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_exit" />
</LinearLayout>